mu2sv/mu2sv/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> decls procdecls rules
Rule 2     decls -> decls decl
Rule 3     decls -> empty
Rule 4     decl -> CONST constdecls
Rule 5     decl -> TYPE typedecls
Rule 6     decl -> VAR vardecls
Rule 7     constdecls -> constdecls constdecl ;
Rule 8     constdecls -> empty
Rule 9     constdecl -> ID : expr
Rule 10    typedecls -> typedecls typedecl ;
Rule 11    typedecls -> empty
Rule 12    typedecl -> ID : typeexpr
Rule 13    typeexpr -> typeid
Rule 14    typeexpr -> enumtype
Rule 15    typeexpr -> subrangetype
Rule 16    typeexpr -> recordtype
Rule 17    typeexpr -> arraytype
Rule 18    typeid -> ID
Rule 19    enumtype -> ENUM { enums }
Rule 20    enums -> enums , ID
Rule 21    enums -> ID
Rule 22    subrangetype -> expr DOTDOT expr
Rule 23    recordtype -> RECORD fields END
Rule 24    fields -> fields ; field
Rule 25    fields -> fields ;
Rule 26    fields -> field
Rule 27    field -> ID fieldtail
Rule 28    fieldtail -> , ID fieldtail
Rule 29    fieldtail -> : typeexpr
Rule 30    arraytype -> ARRAY [ typeexpr ] OF typeexpr
Rule 31    vardecls -> vardecls vardecl ;
Rule 32    vardecls -> empty
Rule 33    vardecl -> ID vardecltail
Rule 34    vardecltail -> , ID vardecltail
Rule 35    vardecltail -> : typeexpr
Rule 36    procdecls -> procdecls procdecl
Rule 37    procdecls -> procdecls funcdecl
Rule 38    procdecls -> empty
Rule 39    procdecl -> PROCEDURE ID ( optformals ) ; optdecls optstmts END ;
Rule 40    funcdecl -> FUNCTION ID ( optformals ) : typeexpr ; optdecls optstmts END ;
Rule 41    optformals -> formals
Rule 42    optformals -> empty
Rule 43    formals -> formals ; formal
Rule 44    formals -> formals ;
Rule 45    formals -> formal
Rule 46    formal -> VAR formalrest
Rule 47    formal -> formalrest
Rule 48    formalrest -> ID formaltail
Rule 49    formaltail -> , ID formaltail
Rule 50    formaltail -> : typeexpr
Rule 51    optdecls -> decls BEGIN
Rule 52    optdecls -> empty
Rule 53    designator -> ID
Rule 54    designator -> designator [ expr ]
Rule 55    designator -> designator . ID
Rule 56    expr -> expr ? expr : expr
Rule 57    expr -> expr IMPLIES expr
Rule 58    expr -> expr | expr
Rule 59    expr -> expr & expr
Rule 60    expr -> expr < expr
Rule 61    expr -> expr LEQ expr
Rule 62    expr -> expr > expr
Rule 63    expr -> expr GEQ expr
Rule 64    expr -> expr = expr
Rule 65    expr -> expr NEQ expr
Rule 66    expr -> expr + expr
Rule 67    expr -> expr - expr
Rule 68    expr -> expr * expr
Rule 69    expr -> expr / expr
Rule 70    expr -> expr % expr
Rule 71    expr -> ! expr
Rule 72    expr -> + expr
Rule 73    expr -> - expr
Rule 74    expr -> INTCONST
Rule 75    expr -> designator
Rule 76    expr -> ID actuals
Rule 77    expr -> ISUNDEFINED ( designator )
Rule 78    expr -> ( expr )
Rule 79    expr -> FORALL quantifiers DO expr END
Rule 80    expr -> EXISTS quantifiers DO expr END
Rule 81    actuals -> ( exprlist )
Rule 82    actuals -> ( )
Rule 83    exprlist -> exprlist , expr
Rule 84    exprlist -> expr
Rule 85    quantifier -> ID : typeexpr
Rule 86    quantifiers -> quantifier ; quantifiers
Rule 87    quantifiers -> quantifier
Rule 88    optstmts -> stmts
Rule 89    optstmts -> empty
Rule 90    stmts -> stmts ; stmt
Rule 91    stmts -> stmts ;
Rule 92    stmts -> stmt
Rule 93    stmt -> assignment
Rule 94    stmt -> ifstmt
Rule 95    stmt -> whilestmt
Rule 96    stmt -> switchstmt
Rule 97    stmt -> forstmt
Rule 98    stmt -> proccall
Rule 99    stmt -> clearstmt
Rule 100   stmt -> errorstmt
Rule 101   stmt -> assertstmt
Rule 102   stmt -> aliasstmt
Rule 103   stmt -> returnstmt
Rule 104   stmt -> undefinestmt
Rule 105   assignment -> designator ASSIGN expr
Rule 106   ifstmt -> IF expr THEN optstmts optelses END
Rule 107   optelses -> elsif optelses
Rule 108   optelses -> optelse
Rule 109   elsif -> ELSIF expr THEN optstmts
Rule 110   optelse -> ELSE optstmts
Rule 111   optelse -> empty
Rule 112   whilestmt -> WHILE expr DO optstmts END
Rule 113   switchstmt -> SWITCH expr optcases optelse END
Rule 114   optcases -> optcases case
Rule 115   optcases -> empty
Rule 116   case -> CASE exprlist : optstmts
Rule 117   forstmt -> FOR quantifiers DO optstmts END
Rule 118   proccall -> ID actuals
Rule 119   clearstmt -> CLEAR designator
Rule 120   undefinestmt -> UNDEFINE designator
Rule 121   errorstmt -> ERROR STRING
Rule 122   assertstmt -> ASSERT expr optstring
Rule 123   aliasstmt -> ALIAS aliases DO optstmts END
Rule 124   aliases -> aliases ; alias
Rule 125   aliases -> aliases ;
Rule 126   aliases -> alias
Rule 127   alias -> ID : expr
Rule 128   returnstmt -> RETURN optretexpr
Rule 129   optretexpr -> expr
Rule 130   optretexpr -> empty
Rule 131   rules -> rule ; rules
Rule 132   rules -> rule ;
Rule 133   rules -> rule
Rule 134   rule -> simplerule
Rule 135   rule -> aliasrule
Rule 136   rule -> ruleset
Rule 137   rule -> startstate
Rule 138   rule -> invariant
Rule 139   simplerule -> RULE optstring optcondition optdecls optstmts END
Rule 140   optcondition -> expr LONGARROW
Rule 141   optcondition -> empty
Rule 142   optstring -> STRING
Rule 143   optstring -> empty
Rule 144   aliasrule -> ALIAS aliases DO rules END
Rule 145   ruleset -> RULESET quantifiers DO rules END
Rule 146   startstate -> STARTSTATE optstring optdecls optstmts END
Rule 147   invariant -> INVARIANT optstring expr
Rule 148   empty -> <empty>

Terminals, with rules where they appear

!                    : 71
%                    : 70
&                    : 59
(                    : 39 40 77 78 81 82
)                    : 39 40 77 78 81 82
*                    : 68
+                    : 66 72
,                    : 20 28 34 49 83
-                    : 67 73
.                    : 55
/                    : 69
:                    : 9 12 29 35 40 50 56 85 116 127
;                    : 7 10 24 25 31 39 39 40 40 43 44 86 90 91 124 125 131 132
<                    : 60
=                    : 64
>                    : 62
?                    : 56
ALIAS                : 123 144
ARRAY                : 30
ASSERT               : 122
ASSIGN               : 105
BEGIN                : 51
CASE                 : 116
CLEAR                : 119
CONST                : 4
DO                   : 79 80 112 117 123 144 145
DOTDOT               : 22
ELSE                 : 110
ELSIF                : 109
END                  : 23 39 40 79 80 106 112 113 117 123 139 144 145 146
ENUM                 : 19
ERROR                : 121
EXISTS               : 80
FOR                  : 117
FORALL               : 79
FUNCTION             : 40
GEQ                  : 63
ID                   : 9 12 18 20 21 27 28 33 34 39 40 48 49 53 55 76 85 118 127
IF                   : 106
IMPLIES              : 57
INTCONST             : 74
INVARIANT            : 147
ISUNDEFINED          : 77
LEQ                  : 61
LONGARROW            : 140
NEQ                  : 65
OF                   : 30
PROCEDURE            : 39
RECORD               : 23
RETURN               : 128
RULE                 : 139
RULESET              : 145
STARTSTATE           : 146
STRING               : 121 142
SWITCH               : 113
THEN                 : 106 109
TYPE                 : 5
UNDEFINE             : 120
VAR                  : 6 46
WHILE                : 112
[                    : 30 54
]                    : 30 54
error                : 
{                    : 19
|                    : 58
}                    : 19

Nonterminals, with rules where they appear

actuals              : 76 118
alias                : 124 126
aliases              : 123 124 125 144
aliasrule            : 135
aliasstmt            : 102
arraytype            : 17
assertstmt           : 101
assignment           : 93
case                 : 114
clearstmt            : 99
constdecl            : 7
constdecls           : 4 7
decl                 : 2
decls                : 1 2 51
designator           : 54 55 75 77 105 119 120
elsif                : 107
empty                : 3 8 11 32 38 42 52 89 111 115 130 141 143
enums                : 19 20
enumtype             : 14
errorstmt            : 100
expr                 : 9 22 22 54 56 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 72 73 78 79 80 83 84 105 106 109 112 113 122 127 129 140 147
exprlist             : 81 83 116
field                : 24 26
fields               : 23 24 25
fieldtail            : 27 28
formal               : 43 45
formalrest           : 46 47
formals              : 41 43 44
formaltail           : 48 49
forstmt              : 97
funcdecl             : 37
ifstmt               : 94
invariant            : 138
optcases             : 113 114
optcondition         : 139
optdecls             : 39 40 139 146
optelse              : 108 113
optelses             : 106 107
optformals           : 39 40
optretexpr           : 128
optstmts             : 39 40 106 109 110 112 116 117 123 139 146
optstring            : 122 139 146 147
proccall             : 98
procdecl             : 36
procdecls            : 1 36 37
prog                 : 0
quantifier           : 86 87
quantifiers          : 79 80 86 117 145
recordtype           : 16
returnstmt           : 103
rule                 : 131 132 133
rules                : 1 131 144 145
ruleset              : 136
simplerule           : 134
startstate           : 137
stmt                 : 90 92
stmts                : 88 90 91
subrangetype         : 15
switchstmt           : 96
typedecl             : 10
typedecls            : 5 10
typeexpr             : 12 29 30 30 35 40 50 85
typeid               : 13
undefinestmt         : 104
vardecl              : 31
vardecls             : 6 31
vardecltail          : 33 34
whilestmt            : 95

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . decls procdecls rules
    (2) decls -> . decls decl
    (3) decls -> . empty
    (148) empty -> .

    CONST           reduce using rule 148 (empty -> .)
    TYPE            reduce using rule 148 (empty -> .)
    VAR             reduce using rule 148 (empty -> .)
    PROCEDURE       reduce using rule 148 (empty -> .)
    FUNCTION        reduce using rule 148 (empty -> .)
    RULE            reduce using rule 148 (empty -> .)
    ALIAS           reduce using rule 148 (empty -> .)
    RULESET         reduce using rule 148 (empty -> .)
    STARTSTATE      reduce using rule 148 (empty -> .)
    INVARIANT       reduce using rule 148 (empty -> .)

    prog                           shift and go to state 1
    decls                          shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> decls . procdecls rules
    (2) decls -> decls . decl
    (36) procdecls -> . procdecls procdecl
    (37) procdecls -> . procdecls funcdecl
    (38) procdecls -> . empty
    (4) decl -> . CONST constdecls
    (5) decl -> . TYPE typedecls
    (6) decl -> . VAR vardecls
    (148) empty -> .

    CONST           shift and go to state 7
    TYPE            shift and go to state 8
    VAR             shift and go to state 9
    PROCEDURE       reduce using rule 148 (empty -> .)
    FUNCTION        reduce using rule 148 (empty -> .)
    RULE            reduce using rule 148 (empty -> .)
    ALIAS           reduce using rule 148 (empty -> .)
    RULESET         reduce using rule 148 (empty -> .)
    STARTSTATE      reduce using rule 148 (empty -> .)
    INVARIANT       reduce using rule 148 (empty -> .)

    procdecls                      shift and go to state 4
    decl                           shift and go to state 5
    empty                          shift and go to state 6

state 3

    (3) decls -> empty .

    CONST           reduce using rule 3 (decls -> empty .)
    TYPE            reduce using rule 3 (decls -> empty .)
    VAR             reduce using rule 3 (decls -> empty .)
    PROCEDURE       reduce using rule 3 (decls -> empty .)
    FUNCTION        reduce using rule 3 (decls -> empty .)
    RULE            reduce using rule 3 (decls -> empty .)
    ALIAS           reduce using rule 3 (decls -> empty .)
    RULESET         reduce using rule 3 (decls -> empty .)
    STARTSTATE      reduce using rule 3 (decls -> empty .)
    INVARIANT       reduce using rule 3 (decls -> empty .)


state 4

    (1) prog -> decls procdecls . rules
    (36) procdecls -> procdecls . procdecl
    (37) procdecls -> procdecls . funcdecl
    (131) rules -> . rule ; rules
    (132) rules -> . rule ;
    (133) rules -> . rule
    (39) procdecl -> . PROCEDURE ID ( optformals ) ; optdecls optstmts END ;
    (40) funcdecl -> . FUNCTION ID ( optformals ) : typeexpr ; optdecls optstmts END ;
    (134) rule -> . simplerule
    (135) rule -> . aliasrule
    (136) rule -> . ruleset
    (137) rule -> . startstate
    (138) rule -> . invariant
    (139) simplerule -> . RULE optstring optcondition optdecls optstmts END
    (144) aliasrule -> . ALIAS aliases DO rules END
    (145) ruleset -> . RULESET quantifiers DO rules END
    (146) startstate -> . STARTSTATE optstring optdecls optstmts END
    (147) invariant -> . INVARIANT optstring expr

    PROCEDURE       shift and go to state 14
    FUNCTION        shift and go to state 15
    RULE            shift and go to state 21
    ALIAS           shift and go to state 22
    RULESET         shift and go to state 23
    STARTSTATE      shift and go to state 24
    INVARIANT       shift and go to state 25

    rules                          shift and go to state 10
    procdecl                       shift and go to state 11
    funcdecl                       shift and go to state 12
    rule                           shift and go to state 13
    simplerule                     shift and go to state 16
    aliasrule                      shift and go to state 17
    ruleset                        shift and go to state 18
    startstate                     shift and go to state 19
    invariant                      shift and go to state 20

state 5

    (2) decls -> decls decl .

    CONST           reduce using rule 2 (decls -> decls decl .)
    TYPE            reduce using rule 2 (decls -> decls decl .)
    VAR             reduce using rule 2 (decls -> decls decl .)
    PROCEDURE       reduce using rule 2 (decls -> decls decl .)
    FUNCTION        reduce using rule 2 (decls -> decls decl .)
    RULE            reduce using rule 2 (decls -> decls decl .)
    ALIAS           reduce using rule 2 (decls -> decls decl .)
    RULESET         reduce using rule 2 (decls -> decls decl .)
    STARTSTATE      reduce using rule 2 (decls -> decls decl .)
    INVARIANT       reduce using rule 2 (decls -> decls decl .)
    BEGIN           reduce using rule 2 (decls -> decls decl .)


state 6

    (38) procdecls -> empty .

    PROCEDURE       reduce using rule 38 (procdecls -> empty .)
    FUNCTION        reduce using rule 38 (procdecls -> empty .)
    RULE            reduce using rule 38 (procdecls -> empty .)
    ALIAS           reduce using rule 38 (procdecls -> empty .)
    RULESET         reduce using rule 38 (procdecls -> empty .)
    STARTSTATE      reduce using rule 38 (procdecls -> empty .)
    INVARIANT       reduce using rule 38 (procdecls -> empty .)


state 7

    (4) decl -> CONST . constdecls
    (7) constdecls -> . constdecls constdecl ;
    (8) constdecls -> . empty
    (148) empty -> .

    ID              reduce using rule 148 (empty -> .)
    CONST           reduce using rule 148 (empty -> .)
    TYPE            reduce using rule 148 (empty -> .)
    VAR             reduce using rule 148 (empty -> .)
    PROCEDURE       reduce using rule 148 (empty -> .)
    FUNCTION        reduce using rule 148 (empty -> .)
    RULE            reduce using rule 148 (empty -> .)
    ALIAS           reduce using rule 148 (empty -> .)
    RULESET         reduce using rule 148 (empty -> .)
    STARTSTATE      reduce using rule 148 (empty -> .)
    INVARIANT       reduce using rule 148 (empty -> .)
    BEGIN           reduce using rule 148 (empty -> .)

    constdecls                     shift and go to state 26
    empty                          shift and go to state 27

state 8

    (5) decl -> TYPE . typedecls
    (10) typedecls -> . typedecls typedecl ;
    (11) typedecls -> . empty
    (148) empty -> .

    ID              reduce using rule 148 (empty -> .)
    CONST           reduce using rule 148 (empty -> .)
    TYPE            reduce using rule 148 (empty -> .)
    VAR             reduce using rule 148 (empty -> .)
    PROCEDURE       reduce using rule 148 (empty -> .)
    FUNCTION        reduce using rule 148 (empty -> .)
    RULE            reduce using rule 148 (empty -> .)
    ALIAS           reduce using rule 148 (empty -> .)
    RULESET         reduce using rule 148 (empty -> .)
    STARTSTATE      reduce using rule 148 (empty -> .)
    INVARIANT       reduce using rule 148 (empty -> .)
    BEGIN           reduce using rule 148 (empty -> .)

    typedecls                      shift and go to state 28
    empty                          shift and go to state 29

state 9

    (6) decl -> VAR . vardecls
    (31) vardecls -> . vardecls vardecl ;
    (32) vardecls -> . empty
    (148) empty -> .

    ID              reduce using rule 148 (empty -> .)
    CONST           reduce using rule 148 (empty -> .)
    TYPE            reduce using rule 148 (empty -> .)
    VAR             reduce using rule 148 (empty -> .)
    PROCEDURE       reduce using rule 148 (empty -> .)
    FUNCTION        reduce using rule 148 (empty -> .)
    RULE            reduce using rule 148 (empty -> .)
    ALIAS           reduce using rule 148 (empty -> .)
    RULESET         reduce using rule 148 (empty -> .)
    STARTSTATE      reduce using rule 148 (empty -> .)
    INVARIANT       reduce using rule 148 (empty -> .)
    BEGIN           reduce using rule 148 (empty -> .)

    vardecls                       shift and go to state 30
    empty                          shift and go to state 31

state 10

    (1) prog -> decls procdecls rules .

    $end            reduce using rule 1 (prog -> decls procdecls rules .)


state 11

    (36) procdecls -> procdecls procdecl .

    PROCEDURE       reduce using rule 36 (procdecls -> procdecls procdecl .)
    FUNCTION        reduce using rule 36 (procdecls -> procdecls procdecl .)
    RULE            reduce using rule 36 (procdecls -> procdecls procdecl .)
    ALIAS           reduce using rule 36 (procdecls -> procdecls procdecl .)
    RULESET         reduce using rule 36 (procdecls -> procdecls procdecl .)
    STARTSTATE      reduce using rule 36 (procdecls -> procdecls procdecl .)
    INVARIANT       reduce using rule 36 (procdecls -> procdecls procdecl .)


state 12

    (37) procdecls -> procdecls funcdecl .

    PROCEDURE       reduce using rule 37 (procdecls -> procdecls funcdecl .)
    FUNCTION        reduce using rule 37 (procdecls -> procdecls funcdecl .)
    RULE            reduce using rule 37 (procdecls -> procdecls funcdecl .)
    ALIAS           reduce using rule 37 (procdecls -> procdecls funcdecl .)
    RULESET         reduce using rule 37 (procdecls -> procdecls funcdecl .)
    STARTSTATE      reduce using rule 37 (procdecls -> procdecls funcdecl .)
    INVARIANT       reduce using rule 37 (procdecls -> procdecls funcdecl .)


state 13

    (131) rules -> rule . ; rules
    (132) rules -> rule . ;
    (133) rules -> rule .

    ;               shift and go to state 32
    $end            reduce using rule 133 (rules -> rule .)
    END             reduce using rule 133 (rules -> rule .)


state 14

    (39) procdecl -> PROCEDURE . ID ( optformals ) ; optdecls optstmts END ;

    ID              shift and go to state 33


state 15

    (40) funcdecl -> FUNCTION . ID ( optformals ) : typeexpr ; optdecls optstmts END ;

    ID              shift and go to state 34


state 16

    (134) rule -> simplerule .

    ;               reduce using rule 134 (rule -> simplerule .)
    $end            reduce using rule 134 (rule -> simplerule .)
    END             reduce using rule 134 (rule -> simplerule .)


state 17

    (135) rule -> aliasrule .

    ;               reduce using rule 135 (rule -> aliasrule .)
    $end            reduce using rule 135 (rule -> aliasrule .)
    END             reduce using rule 135 (rule -> aliasrule .)


state 18

    (136) rule -> ruleset .

    ;               reduce using rule 136 (rule -> ruleset .)
    $end            reduce using rule 136 (rule -> ruleset .)
    END             reduce using rule 136 (rule -> ruleset .)


state 19

    (137) rule -> startstate .

    ;               reduce using rule 137 (rule -> startstate .)
    $end            reduce using rule 137 (rule -> startstate .)
